--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ HOST_SERVER="0.0.0.0"
 NAME_SERVER="my-wallet-api"
 PATH_ERR_CONTRACT="./script/errorContract.json"
 
-NAME_DB="katakode-api"
+NAME_DB="my-wallet"
 HOST_DB="localhost"
 PORT_DB="5432"
 USER_DB="postgres"
