--- a/.env
+++ b/.env
@@ -11,6 +11,11 @@ PORT_DB="5432"
 USER_DB="postgres"
 PASSWORD_DB="postgres"
 
+MIDTRANS_SERVER_KEY="SB-Mid-server-QNvvls2NKNo5wBYZnSw-BJh1"
+MIDTRANS_CLIENT_KEY="SB-Mid-client-b6RYbSorrT3WFIzE"
+MIDTRANS_MERCHANT_ID="G981281260"
+MIDTRANS_ENV="development"
+
 #HOST_RABBIT="armadillo-01.rmq.cloudamqp.com"
 #PORT_RABBIT="5672"
 #USER_RABBIT="vibkpvek"
