--- a/.env
+++ b/.env
@@ -11,9 +11,14 @@ PORT_DB="5432"
 USER_DB="postgres"
 PASSWORD_DB="postgres"
 
-#HOST_RABBIT="armadillo-01.rmq.cloudamqp.com"
-#PORT_RABBIT="5672"
-#USER_RABBIT="vibkpvek"
-#PASSWORD_RABBIT="u1i118qy2lxUXDnG4wGpEXNm2lAyka-3"
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_MERCHANT_ID=
+MIDTRANS_ENV="development"
 
-SECRET_KEY="MyVerySecret64bitLength"
+#HOST_RABBIT=
+#PORT_RABBIT=
+#USER_RABBIT=
+#PASSWORD_RABBIT=
+
+SECRET_KEY=
