--- a/.env
+++ b/.env
@@ -16,9 +16,9 @@ MIDTRANS_CLIENT_KEY="SB-Mid-client-b6RYbSorrT3WFIzE"
 MIDTRANS_MERCHANT_ID="G981281260"
 MIDTRANS_ENV="development"
 
-#HOST_RABBIT=
-#PORT_RABBIT=
-#USER_RABBIT=
-#PASSWORD_RABBIT=
+HOST_RABBIT=
+PORT_RABBIT=
+USER_RABBIT=
+PASSWORD_RABBIT=
 
 SECRET_KEY=
