adding message broker to communicate with email service

--- a/.env
+++ b/.env
@@ -11,14 +11,11 @@ PORT_DB="5432"
 USER_DB="postgres"
 PASSWORD_DB="postgres"
 
-MIDTRANS_SERVER_KEY="SB-Mid-server-QNvvls2NKNo5wBYZnSw-BJh1"
-MIDTRANS_CLIENT_KEY="SB-Mid-client-b6RYbSorrT3WFIzE"
-MIDTRANS_MERCHANT_ID="G981281260"
-MIDTRANS_ENV="development"
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_MERCHANT_ID=
+MIDTRANS_ENV=
 
-HOST_RABBIT=
-PORT_RABBIT=
-USER_RABBIT=
-PASSWORD_RABBIT=
+DSN_MQ=
 
 SECRET_KEY=
