changing flow login and register

--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ MIDTRANS_SERVER_KEY=
 MIDTRANS_CLIENT_KEY=
 MIDTRANS_MERCHANT_ID=
 
+TWILIO_ACCOUNT_SID="AC5c6de7aa0ac4f3db6d35af869b87fd4a"
+TWILIO_AUTH_TOKEN="32a4acc77aeee04d1e6820953e86b5df"
+
 DSN_MQ=
 
-SECRET_KEY=
+SECRET_KEY= "myVeryStrongSecretPassword64bitLength"
